tests/snapshots/format_contracts__backend_state.snap
---
source: tests/format_contracts.rs
expression: canonical_json(&backend_state)
---
{
  "github:Penguin-Chrono-Labs/fish-from-the-future:17": {
    "assignees": [
      "tester"
    ],
    "labels": [
      "status::todo"
    ],
    "state": "open",
    "title": "Investigate temporal image drift",
    "updated_at": "2026-03-10T08:00:00Z"
  },
  "gitlab:chrono/wormhole-router:42": {
    "assignees": [
      "tester"
    ],
    "labels": [
      "status::in-progress",
      "bug"
    ],
    "state": "opened",
    "title": "Fix wormhole stabilizer retry logic",
    "updated_at": "2026-03-13T10:22:00Z"
  }
}
