tests/snapshots/format_contracts__gh_pen_fis_17.snap
---
source: tests/format_contracts.rs
expression: "round_trip_issue(\"GH-PEN-FIS--17.md\")"
---
---
id: GH-PEN-FIS--17
title: Investigate temporal image drift
state: todo
board: personal
project: fish-from-the-future
org: chrono
priority: medium
labels:
- enhancement
assignees:
- tester
order: 1
github:
  repo: Penguin-Chrono-Labs/fish-from-the-future
  issue_id: 17
  url: https://github.com/Penguin-Chrono-Labs/fish-from-the-future/issues/17
  updated_at: 2026-03-10T08:00:00Z
local_updated_at: 2026-03-10T08:00:00Z
remote_deleted: false
---

## Description

Investigate temporal image drift.
