tests/snapshots/format_contracts__gl_chr_wor_42.snap
---
source: tests/format_contracts.rs
expression: "round_trip_issue(\"GL-CHR-WOR--42.md\")"
---
---
id: GL-CHR-WOR--42
title: Fix wormhole stabilizer retry logic
status: in-progress
board: personal
project: wormhole-router
org: chrono
priority: high
labels:
- bug
- temporal-drift
assignees:
- tester
cycle: 2026-Q1
order: 1
gitlab:
  repo: chrono/wormhole-router
  issue_id: 42
  url: https://gitlab.example.com/chrono/wormhole-router/-/issues/42
  updated_at: 2026-03-13T10:22:00Z
local_updated_at: 2026-03-13T11:05:00Z
due: 2026-03-20
remote_deleted: false
---

## Description

Fix the temporal drift in the wormhole stabilizer retry logic.
