tests/snapshots/format_contracts__gl_chr_wor_42_remote.snap
---
source: tests/format_contracts.rs
expression: "round_trip_issue(\"GL-CHR-WOR--42.REMOTE.md\")"
---
---
id: GL-CHR-WOR--42
title: Fix wormhole stabilizer retry logic
state: review
board: personal
project: wormhole-router
org: chrono
priority: high
labels:
- bug
assignees:
- tester
cycle: 2026-Q1
order: 1
gitlab:
  repo: chrono/wormhole-router
  issue_id: 42
  url: https://gitlab.example.com/chrono/wormhole-router/-/issues/42
  updated_at: 2026-03-16T12:00:00Z
local_updated_at: 2026-03-16T12:00:00Z
due: 2026-03-20
remote_deleted: false
conflict_role: remote
conflict_parent: GL-CHR-WOR--42
---

## Description

Remote version of the issue body.
