tests/snapshots/format_contracts__lo_ice_ice_1.snap
---
source: tests/format_contracts.rs
expression: "round_trip_issue(\"LO-ICE-ICE--1.md\")"
---
---
id: LO-ICE-ICE--1
title: Local project issue
state: todo
board: personal
project: ice-shelf-tracker
priority: low
labels: []
assignee: tester
order: 1
local_updated_at: 2026-03-14T10:00:00Z
remote_deleted: false
---

## Description

Local project issue.
