tests/snapshots/format_contracts__riptask_multi_yaml.snap
---
source: tests/format_contracts.rs
expression: "serde_yaml_ng::to_string(&multi).expect(\"serialize multi config\")"
---
version: 1
auto_commit: false
defaults:
  board: personal
  status: todo
  priority: medium
  assignee: tester
  template: task
projects:
- name: wormhole-router
  vc_backend:
    type: gitlab
    host: https://gitlab.example.com
    repo: chrono/wormhole-router
  tasks_backend:
    type: gitlab
    host: https://gitlab.example.com
    repo: chrono/wormhole-router
  default_board: penguin-chrono-labs
  default_org: chrono
  key: GL-CHR-WOR
- name: fish-from-the-future
  vc_backend:
    type: github
    repo: Penguin-Chrono-Labs/fish-from-the-future
  tasks_backend:
    type: github
    repo: Penguin-Chrono-Labs/fish-from-the-future
  default_board: penguin-chrono-labs
  default_org: chrono
  key: GH-PEN-FIS
- name: penguin-scratch
  vc_backend:
    type: local
    path: /tmp/penguin-scratch
  tasks_backend:
    type: local
    path: /tmp/penguin-scratch
  default_board: personal
  key: LO-PEN
boards:
- name: penguin-chrono-labs
  statuses:
  - backlog
  - todo
  - in-progress
  - review
  - done
- name: personal
  statuses:
  - backlog
  - todo
  - in-progress
  - done
ui:
  opener: nvim -R
  tree_depth: 2
  fzf_opts: --border
ai:
  enabled: false
  features:
    new_body_gen: true
    triage: true
    summarize: true
    ask: true
    commit: true
sync:
  conflict_detection: true
recurring:
- id: recur-weekly-review
  template: templates/weekly-review.md
  title_pattern: Weekly review - {YYYY-MM-DD}
  board: personal
  project: personal
  status: todo
  priority: medium
  assignee: tester
  labels:
  - recurring
  - review
  frequency: weekly
  day_of_week: monday
  start: 2026-03-17
