tests/snapshots/format_contracts__riptask_yaml.snap
---
source: tests/format_contracts.rs
expression: "serde_yaml_ng::to_string(&config).expect(\"serialize config\")"
---
version: 1
auto_commit: false
defaults:
  board: personal
  status: todo
  priority: medium
  assignee: tester
  template: task
projects:
- name: wormhole-router
  vc_backend:
    type: gitlab
    host: https://gitlab.example.com
    repo: chrono/wormhole-router
  tasks_backend:
    type: gitlab
    host: https://gitlab.example.com
    repo: chrono/wormhole-router
  default_board: personal
  default_org: chrono
  key: GL-CHR-WOR
boards:
- name: personal
  statuses:
  - backlog
  - todo
  - in-progress
  - review
  - done
ui:
  opener: nvim -R
  tree_depth: 2
  fzf_opts: --border
ai:
  enabled: false
  features:
    new_body_gen: true
    triage: true
    summarize: true
    ask: true
    commit: true
sync:
  conflict_detection: true
recurring: []
